Bug 152896 - Modern IDB: Blocked event can fire on a delete request even after the last open connection has closed
Summary: Modern IDB: Blocked event can fire on a delete request even after the last op...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: Safari 9
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brady Eidson
URL:
Keywords:
Depends on:
Blocks: 149117 150882 152554
  Show dependency treegraph
 
Reported: 2016-01-08 09:44 PST by Brady Eidson
Modified: 2016-01-08 13:12 PST (History)
4 users (show)

See Also:


Attachments
Patch v1 (17.74 KB, patch)
2016-01-08 10:42 PST, Brady Eidson
no flags Details | Formatted Diff | Diff
Patch v1 (17.72 KB, patch)
2016-01-08 10:44 PST, Brady Eidson
achristensen: review+
achristensen: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Brady Eidson 2016-01-08 09:44:39 PST
Modern IDB: Blocked event can fire on a delete request even after the last open connection has closed

Fixing this fixes lots of tests.
Comment 1 Brady Eidson 2016-01-08 10:42:34 PST
Created attachment 268549 [details]
Patch v1
Comment 2 WebKit Commit Bot 2016-01-08 10:43:35 PST
Attachment 268549 [details] did not pass style-queue:


ERROR: Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp:195:  An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement.  [readability/control_flow] [4]
Total errors found: 1 in 14 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Brady Eidson 2016-01-08 10:44:32 PST
Created attachment 268550 [details]
Patch v1
Comment 4 Alex Christensen 2016-01-08 12:26:25 PST
Comment on attachment 268550 [details]
Patch v1

View in context: https://bugs.webkit.org/attachment.cgi?id=268550&action=review

> Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp:232
> +    else
> +        m_databaseInfo = nullptr;

This is already null.  Not necessary.
Comment 5 Brady Eidson 2016-01-08 13:12:55 PST
https://trac.webkit.org/changeset/194781