LayoutTests/storage/indexeddb/resources/delete-in-upgradeneeded-close-in-versionchange.js
@@ -63,7 +63,6 @@ function deleteSuccessCallback(evt)
 {
     preamble(evt);
     shouldBeTrue("sawVersionChange");
-    debug("FIXME: Blocked events shouldn't fire if connections close in versionchange handler. http://crbug.com/100123");
     shouldBeFalse("sawDeleteBlocked");
     shouldBeTrue("sawUpgradeNeeded");
     finishJSTest();
